--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -84,3 +84,93 @@ li:not(:last-child) {
   margin-top: 3rem;
   padding: 0.6rem 3rem;
 }
+
+main {
+  display: flex;
+  justify-content: center;
+  border-bottom: 0.12rem solid #e7e7e7;
+}
+
+#main-content {
+  width: 60%;
+  justify-content: center;
+  padding: 1rem 0;
+}
+
+.trending-on-medium {
+  display: flex;
+  align-items: center;
+  text-transform: uppercase;
+  font-weight: 600;
+  font-size: 0.8rem;
+  gap: 0.5rem;
+}
+
+.trending-on-medium img {
+  width: 1.5rem;
+}
+.trending-articles {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-bottom: 2rem;
+}
+
+.one-trending-article {
+  display: flex;
+  max-width: 30%;
+  min-width: 30%;
+  min-height: 5rem;
+  flex-wrap: wrap;
+  margin-top: 2rem;
+  justify-content: space-between;
+}
+
+.trending-article-num {
+  color: #e7e7e7;
+  font-weight: 800;
+  font-size: 1.5rem;
+  align-self: flex-start;
+  margin-right: 1rem;
+  width: 20px;
+}
+
+.trending-article-content {
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.trending-article-img {
+  align-self: flex-start;
+  border-radius: 50px;
+  width: 1.3rem;
+}
+
+.trending-article-author-box {
+  display: flex;
+  align-items: center;
+  gap: 0.5rem;
+  margin-bottom: 0.4rem;
+}
+
+.trending-article-author {
+  font-weight: 600;
+  font-size: 0.9rem;
+}
+
+.trending-article-title {
+  max-width: 19rem;
+  font-weight: 800;
+  font-size: 1rem;
+  flex-grow: 1;
+}
+
+.trending-article-date {
+  font-size: 0.8rem;
+}
+
+.trending-article-reading-time {
+  align-self: flex-end;
+  font-size: 0.8rem;
+}
