--- a/base_di_partenza/assets/css/style.css
+++ b/base_di_partenza/assets/css/style.css
@@ -192,7 +192,7 @@ main {
 
 .one-latest-article {
   margin-top: 3rem;
-  max-width: 65%;
+  min-width: 50%;
   display: flex;
   height: 8rem;
   justify-content: space-between;
@@ -234,4 +234,52 @@ span {
   background-color: #f3f2f2;
   padding: 0.3rem 0.6rem;
   border-radius: 50px;
+}
+
+aside {
+  display: flex;
+  flex-direction: column;
+
+  margin-top: 3rem;
+  margin-left: 9rem;
+  max-width: 30%;
+  height: 20rem;
+}
+
+aside h2 {
+  text-transform: uppercase;
+  font-weight: 900;
+  font-size: 0.8rem;
+}
+
+a {
+  text-decoration: none;
+  color: grey;
+}
+
+.tags {
+  min-height: 10.5rem;
+  margin-bottom: 1.4rem;
+}
+
+.tags ul {
+  margin-top: 0.5rem;
+  flex-wrap: wrap;
+}
+
+.tags li {
+  color: grey;
+  margin-top: 0.5rem;
+  border: 1px solid #e7e7e7;
+}
+
+hr {
+  margin: 0;
+}
+
+.useful-links {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1.2rem;
+  margin-top: 2rem;
 }
